fix contrast accessibility issue

--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ iframe {
 
 .section-text {
     line-height: 24px;
-    color: #7c8595;
+    color: #686c73;
     margin-bottom: 30px;
     text-align: center;
 
